--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projectmanagement</title>
+    <link href="../css/style.css" rel="stylesheet">
     <script src="../dist/app.js" defer></script>
 </head>
 <body>
